--- a/.github/workflows/Loghunter.yml
+++ b/.github/workflows/Loghunter.yml
@@ -1,8 +1,8 @@
-name: InfernoLogHunter Telegram Only
+name: InfernoLogHunter AI Scan
 
 on:
   schedule:
-    - cron: '*/15 * * * *'
+    - cron: '*/20 * * * *'
   workflow_dispatch:
 
 jobs:
@@ -10,17 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repo
+    - name: 🔄 Checkout Repo
       uses: actions/checkout@v2
 
-    - name: Set up Python
+    - name: 🐍 Set Up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.11'
 
-    - name: Install dependencies
+    - name: ⚙️ Install Dependencies
       run: |
         pip install requests feedparser beautifulsoup4
 
-    - name: Run InfernoLogHunter Telegram-Only
-      run: python InfernoLogHunter_Pro_Telegram_Only.py
+    - name: 🚀 Run InfernoLogHunter AI
+      run: python InfernoLogHunter_Pro_AI_Scorer.py
